[gd_scene load_steps=10 format=3 uid="uid://ccipepny7crpc"]

[ext_resource type="Script" uid="uid://qlvuov8pif8t" path="res://scripts/level.gd" id="1_pa8r4"]
[ext_resource type="PackedScene" uid="uid://bb5bg8l4dg2qo" path="res://scenes/defeat_area.tscn" id="3_5xbjy"]
[ext_resource type="PackedScene" uid="uid://cxrguhfw66yl0" path="res://scenes/brick.tscn" id="5_4nkto"]
[ext_resource type="Script" uid="uid://bohme6gelcf6e" path="res://scripts/level_bricks_container.gd" id="6_e3sih"]
[ext_resource type="PackedScene" uid="uid://cp4ysh3g487rj" path="res://scenes/level_ui.tscn" id="7_pa8r4"]
[ext_resource type="AudioStream" uid="uid://d47i1tpu83dc" path="res://assets/sounds/Sakura-Girl-Yay-chosic.com_.mp3" id="8_15mv3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3sih"]
size = Vector2(23, 565)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2y5yt"]
size = Vector2(17, 576)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2os1m"]
size = Vector2(592, 26)

[node name="Level_1" type="Node2D"]
script = ExtResource("1_pa8r4")

[node name="Walls" type="Node2D" parent="."]
position = Vector2(0, 3)

[node name="ColorRect" type="ColorRect" parent="Walls"]
offset_top = -3.0
offset_right = 1152.0
offset_bottom = 645.0
color = Color(0.27, 0.198, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="Walls"]
offset_left = 290.0
offset_top = 106.0
offset_right = 874.0
offset_bottom = 657.0
color = Color(0.235294, 0.172549, 0, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="Walls"]
position = Vector2(275, 143)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D"]
position = Vector2(2.5, 220.5)
shape = SubResource("RectangleShape2D_e3sih")

[node name="StaticBody2D2" type="StaticBody2D" parent="Walls"]
position = Vector2(890, 148)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D2"]
position = Vector2(-4.5, 218)
shape = SubResource("RectangleShape2D_2y5yt")

[node name="StaticBody2D3" type="StaticBody2D" parent="Walls"]
position = Vector2(343, 136)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/StaticBody2D3"]
position = Vector2(239, -43)
shape = SubResource("RectangleShape2D_2os1m")

[node name="defeat_area" parent="." instance=ExtResource("3_5xbjy")]
position = Vector2(585, 651)

[node name="Bricks" type="Node2D" parent="."]
script = ExtResource("6_e3sih")

[node name="brick4" parent="Bricks" instance=ExtResource("5_4nkto")]
position = Vector2(528, 454)
rotation = 3.14159

[node name="brick5" parent="Bricks" instance=ExtResource("5_4nkto")]
position = Vector2(597, 343)
rotation = 3.14159
brick_color = 5

[node name="brick6" parent="Bricks" instance=ExtResource("5_4nkto")]
position = Vector2(627, 416)
rotation = 3.14159
brick_color = 2

[node name="brick7" parent="Bricks" instance=ExtResource("5_4nkto")]
position = Vector2(423, 357)
rotation = 3.14159
brick_color = 5

[node name="brick8" parent="Bricks" instance=ExtResource("5_4nkto")]
position = Vector2(606, 248)
rotation = 3.14159
brick_color = 4

[node name="brick9" parent="Bricks" instance=ExtResource("5_4nkto")]
position = Vector2(553, 289)
rotation = 3.14159
brick_color = 6

[node name="brick10" parent="Bricks" instance=ExtResource("5_4nkto")]
position = Vector2(730, 353)
rotation = 3.14159
brick_color = 2

[node name="brick11" parent="Bricks" instance=ExtResource("5_4nkto")]
position = Vector2(377, 197)
rotation = 3.14159

[node name="Level_UI" parent="." instance=ExtResource("7_pa8r4")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_15mv3")
volume_db = -23.243
parameters/looping = true

[node name="InitialPosition" type="Marker2D" parent="."]
position = Vector2(602, 614)

[node name="playables" type="Node2D" parent="."]

[connection signal="on_live_lost" from="defeat_area" to="." method="_on_live_lost"]
[connection signal="child_exiting_tree" from="Bricks" to="Bricks" method="_on_child_exiting_tree"]
[connection signal="on_destroy_brick" from="Bricks" to="." method="_on_bricks_destroy"]
